Set WIZARD via CMake rather than hard-coding it.
This way, it's much easier to change the WIZARD definition for
development environments or forks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,9 @@ else ()
     set (LIB_TYPE STATIC)
 endif ()
 
+set (WIZARD "wizard" CACHE STRING "The person allowed to use the -D option")
+add_definitions (-DWIZARD="${WIZARD}")
+
 set (ENABLE_NETCLIENT TRUE CACHE BOOL "Enable network client mode")
 
 # NetHack4 server currently uses several Linux-specific apis.
