--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - BUILD_SYSTEM="aimake"
 notifications:
     email:
-        - bingehack@csh.rit.edu
+        - bingehack-ci@csh.rit.edu
 matrix:
     exclude:
         - compiler: clang
