Implements the binge board.
When logged into a server a new option: "binge board" is now presented.
Upon opening, it will show people currently playing with their status in
the game.

Required changes to the database schema to track additional information
about games. Works by polling the database for any non-dead players that
have done anything since the binge board was opened.

--- a/nethack/CMakeLists.txt
+++ b/nethack/CMakeLists.txt
@@ -22,6 +22,7 @@ set (ENABLE_NETCLIENT TRUE CACHE BOOL "Enable network client mode")
 
 set (NH_CURSES_SRC
     src/main.c
+    src/board.c
     src/color.c
     src/dialog.c
     src/gameover.c
